--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,8 +92,16 @@ body {
 		<div class="row-fluid">
 			<div class="span3">
 				<div class="input-append">
-					<input id="search_node_key" type="text" placeholder="请输入..." />
+					<label>请选择设备类型:</label> <select id='zTree_node_type' class='span4'>
+						<option value='0'>低压设备</option>
+						<option value='1'>高压设备</option>
+						<option value='2'>无功无场设备</option>
+					</select> <input id="search_node_key" class="span6" type="text"
+						placeholder="请输入..." />
 					<button id="searchNode" class="btn" type="button">搜索</button>
+
+
+
 				</div>
 				<div class="well sidebar-nav ">
 					<ul id="treeDemo" class="ztree"></ul>
