--- a/src/main/resources/templates/line_manager.html
+++ b/src/main/resources/templates/line_manager.html
@@ -20,8 +20,12 @@ body {
 	padding-bottom: 40px;
 }
 
+th, td {
+	white-space: nowrap;
+}
+
 .sidebar-nav {
-	padding: 9px 0;
+	padding: 9px;
 }
 
 @media ( max-width : 980px) {
@@ -34,7 +38,7 @@ body {
 }
 </style>
 <link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
-<link href="../../css/switch_list.css" rel="stylesheet" />
+<link href="../../css/manager.css" rel="stylesheet" />
 
 <!-- dataTables -->
 <link href="../../css/dataTables/dataTables.tableTools.css"
@@ -101,66 +105,49 @@ body {
 						<a href="#add_switch_modal" id="add_switch_btn"
 							class="btn btn-primary btn-large" data-toggle="modal"
 							data-backdrop="static">添加开关 </a><a id="return_line_list_btn"
-							href="line_list" class="btn btn-large">返回线路汇总 &raquo;</a>
+							href="index" class="btn btn-large">返回首页 &raquo;</a>
 					</div>
 				</div>
 			</div>
 
 			<div class="row-fluid">
-				<div class="container-fluid span3">
-					<div class="well sidebar-nav ">
-						<ul class="nav nav-list bs-docs-sidenav">
-							<li class="nav-header">资源管理</li>
-							<li><a href="substation_manager">变电站管理</a></li>
-							<li><a href="line_manager">线路管理</a></li>
-							<li class="nav-header">设备管理</li>
-							<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
-							<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
-							<li><a href="control_measure_switch_manager">无功无场开关管理</a></li>
+				<div class="span2 container-fluid well sidebar-nav">
+					<ul class="nav nav-list bs-docs-sidenav">
+						<li class="nav-header">资源管理</li>
+						<li><a href="substation_manager">变电站管理</a></li>
+						<li><a href="#">线路管理</a></li>
+						<li class="nav-header">设备管理</li>
+						<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
+						<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
+						<li><a href="control_measure_switch_manager">无功无场开关管理</a></li>
 
-							<li class="nav-header">事件管理</li>
-							<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
-							<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
-							<li><a href="control_measure_hitch_event_manager">无功无场故障事件</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li class="nav-header">Sidebar</li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Link</a></li>
-						</ul>
-					</div>
+						<li class="nav-header">事件管理</li>
+						<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
+						<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
+						<li><a href="control_measure_hitch_event_manager">无功无场故障事件</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li class="nav-header">Sidebar</li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+					</ul>
 					<!--/.well -->
 				</div>
 				<!--/span-->
-				<div class="container-fluid span9">
-
+				<div class="span10 container">
 					<table id="switch_list"
 						class="table table-bordered table-striped table-hover table-condensed success">
-
 						<thead>
-							<td>设备号码</td>
 							<td>名称</td>
 							<td class="hidden">Id</td>
-							<td class="hidden">线路ID</td>
-							<td>SIM</td>
-							<td>公约</td>
-							<td>是否在线</td>
-							<td>进入地图</td>
 							<td>修改</td>
 							<td>删除</td>
 						</thead>
 						<tr th:each="switch:${switches}" th:if="*{switch!=null}">
-							<td th:text="${switch.deviceNumber}"></td>
 							<td th:text="${switch.name}"></td>
 							<td class="hide" th:text="${switch.id}"></td>
-							<td class="hide" th:text="${switch.lineId}"></td>
-							<td th:text="${switch.simNumber}"></td>
-							<td th:text="${switch.protocal}!=0?'07':'101'"></td>
-							<td th:text="${switch.isOnline}"></td>
-							<td><a href=""
-								th:attr="href=@{enter_map?switchId=} + ${switch.id}"
-								role="button" class="btn btn">进入地图 &raquo;</a></td>
+							
 							<td><a href="#edit_switch_modal" role="button"
 								class="edit_switch_btn btn" data-toggle="modal">修改 &raquo;</a></td>
 							<td><a href="#del_switch_modal"
@@ -170,14 +157,8 @@ body {
 							<!-- th:attr="href=@{del_switch?switchId=} + ${switch.id}" -->
 						</tr>
 						<tfoot>
-							<td>设备号码</td>
 							<td>名称</td>
 							<td class="hidden">Id</td>
-							<td class="hidden">线路ID</td>
-							<td>SIM</td>
-							<td>公约</td>
-							<td>是否在线</td>
-							<td>进入地图</td>
 							<td>修改</td>
 							<td>删除</td>
 						</tfoot>
@@ -199,12 +180,6 @@ body {
 					action="edit_switch">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
-						<label class="control-label" for="inputDeviceNumber">设备号码</label>
-						<div class="controls">
-							<input type="text" id="inputDeviceNumber" name="deviceNumber" />
-						</div>
-					</div>
-					<div class="control-group">
 						<label class="control-label" for="inputName">名称</label>
 						<div class="controls">
 							<input type="text" id="inputName" name="name" />
@@ -216,36 +191,10 @@ body {
 							<input type="text" id="inputId" name="id" />
 						</div>
 					</div>
-					<div class="hide control-group">
-						<label class="control-label" for="inputLineId">线路Id</label>
-						<div class="controls">
-							<input type="text" id="inputLineId" name="lineId" />
-						</div>
-					</div>
-					<div class="hide control-group">
-						<label class="control-label" for="inputIsOnline">在线状态</label>
-						<div class="controls">
-							<input type="text" id="inputIsOnline" name="isOnline" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputSim">SIM</label>
-						<div class="controls">
-							<input type="text" id="inputSim" name="simNumber" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputProtocal">公约</label>
-						<div class="controls">
-							<select name="protocal">
-								<option value="1">07公约</option>
-								<option value="0">101公约</option>
-							</select>
-						</div>
-					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
-						<button id="add_switch_confirm_btn" class="btn btn-primary">添加</button>
+						<button id="add_switch_confirm_btn" class="btn btn-primary"
+							type="submit">添加</button>
 						<!--  btn-primary -->
 					</div>
 				</form>
@@ -266,51 +215,21 @@ body {
 					action="edit_switch">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
-						<label class="control-label" for="inputDeviceNumber">设备号码</label>
-						<div class="controls">
-							<input type="text" id="editDeviceNumber" name="deviceNumber" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputName">名称</label>
+						<label class="control-label" for="editName">名称</label>
 						<div class="controls">
 							<input type="text" id="editName" name="name" />
 						</div>
 					</div>
 					<div class="hide control-group">
-						<label class="control-label" for="inputId">Id</label>
+						<label class="control-label" for="editId">Id</label>
 						<div class="controls">
 							<input type="text" id="editId" name="id" />
 						</div>
 					</div>
-					<div class="hide control-group">
-						<label class="control-label" for="inputLineId">线路Id</label>
-						<div class="controls">
-							<input type="text" id="editLineId" name="lineId" />
-						</div>
-					</div>
-					<div class="hide control-group">
-						<label class="control-label" for="inputIsOnline">在线状态</label>
-						<div class="controls">
-							<input type="text" id="editIsOnline" name="isOnline" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputSim">SIM</label>
-						<div class="controls">
-							<input type="text" id="editSim" name="simNumber" readOnly="true" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputProtocal">公约</label>
-						<div class="controls">
-							<input type="text" id="editProtocal" name="protocal"
-								readOnly="true" />
-						</div>
-					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
-						<button id="edit_switch_confirm_btn" class="btn btn-primary">确定</button>
+						<button id="edit_switch_confirm_btn" class="btn btn-primary"
+							type="submit">确定</button>
 						<!--  btn-primary -->
 					</div>
 				</form>
