--- a/src/main/resources/templates/low_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/low_voltage_hitch_event_manager.html
@@ -110,11 +110,17 @@ th, td {
 				<div class="span2 container-fluid well sidebar-nav">
 					<ul class="nav nav-list bs-docs-sidenav">
 						<li class="nav-header">资源管理</li>
-						<li><a href="#">变电站管理</a></li>
-						<li><a href="#about">线路管理</a></li>
-						<li><a href="switch_manager">开关管理</a></li>
+						<li><a href="substation_manager">变电站管理</a></li>
+						<li><a href="line_manager">线路管理</a></li>
+						<li class="nav-header">设备管理</li>
+						<li><a href="low_voltage_switch_manager">低压开关管理</a></li>
+						<li><a href="high_voltage_switch_manager">高压开关管理</a></li>
+						<li><a href="control_measure_switch_manager">无功无场开关管理</a></li>
+
 						<li class="nav-header">事件管理</li>
-						<li class="active"><a href="hitch_event_manager">故障事件管理</a></li>
+						<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
+						<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
+						<li><a href="control_measure_hitch_event_manager">无功无场故障事件</a></li>
 						<li><a href="#">Link</a></li>
 						<li><a href="#">Link</a></li>
 						<li class="nav-header">Sidebar</li>
