新完成了变电站管理，线路管理，低压开关管理

--- a/src/main/resources/templates/high_voltage_switch_manager.html
+++ b/src/main/resources/templates/high_voltage_switch_manager.html
@@ -204,7 +204,7 @@ th, td {
 			</div>
 			<div class="modal-body">
 				<form id="add_switch_form" class="form-horizontal"
-					action="edit_switch">
+					action="edit_high_voltage_switch">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
 						<label class="control-label" for="inputDeviceNumber">设备号码</label>
@@ -285,7 +285,7 @@ th, td {
 			</div>
 			<div class="modal-body">
 				<form id="edit_switch_form" class="form-horizontal"
-					action="edit_switch">
+					action="edit_high_voltage_switch">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
 						<label class="control-label" for="editDeviceNumber">设备号码</label>
@@ -404,6 +404,6 @@ th, td {
 	<script src="../../js/dataTables/dataTables_initial.js"></script>
 
 	<!-- custom -->
-	<script src="../../js/custom/switch_manager.js"></script>
+	<script src="../../js/custom/high_voltage_switch_manager.js"></script>
 </body>
 </html>
