--- a/src/main/resources/templates/line_manager.html
+++ b/src/main/resources/templates/line_manager.html
@@ -104,7 +104,7 @@ th, td {
 					<div class="btn-group offset6">
 						<a href="#add_switch_modal" id="add_switch_btn"
 							class="btn btn-primary btn-large" data-toggle="modal"
-							data-backdrop="static">添加开关 </a><a id="return_line_list_btn"
+							data-backdrop="static">添加线路</a><a id="return_line_list_btn"
 							href="index" class="btn btn-large">返回首页 &raquo;</a>
 					</div>
 				</div>
@@ -136,18 +136,27 @@ th, td {
 				</div>
 				<!--/span-->
 				<div class="span10 container">
+
+					<div class="control-group form-horizontal">
+						<label class="control-label">请选择变电站：</label>
+						<div id="substation_set" class="controls">
+							<select id='substations' class='span2'></select>
+						</div>
+					</div>
 					<table id="switch_list"
 						class="table table-bordered table-striped table-hover table-condensed success">
 						<thead>
 							<td>名称</td>
 							<td class="hidden">Id</td>
+							<td class="hidden">线路ID</td>
 							<td>修改</td>
 							<td>删除</td>
 						</thead>
 						<tr th:each="switch:${switches}" th:if="*{switch!=null}">
 							<td th:text="${switch.name}"></td>
 							<td class="hide" th:text="${switch.id}"></td>
-							
+							<td class="hide" th:text="${switch.substationId}"></td>
+
 							<td><a href="#edit_switch_modal" role="button"
 								class="edit_switch_btn btn" data-toggle="modal">修改 &raquo;</a></td>
 							<td><a href="#del_switch_modal"
@@ -159,6 +168,7 @@ th, td {
 						<tfoot>
 							<td>名称</td>
 							<td class="hidden">Id</td>
+							<td class="hidden">线路ID</td>
 							<td>修改</td>
 							<td>删除</td>
 						</tfoot>
@@ -173,11 +183,11 @@ th, td {
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"
 					aria-hidden="true">×</button>
-				<h3>添加开关</h3>
+				<h3>添加线路</h3>
 			</div>
 			<div class="modal-body">
 				<form id="add_switch_form" class="form-horizontal"
-					action="edit_switch">
+					action="edit_line">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
 						<label class="control-label" for="inputName">名称</label>
@@ -191,6 +201,14 @@ th, td {
 							<input type="text" id="inputId" name="id" />
 						</div>
 					</div>
+					<div class="control-group">
+						<label class="control-label" for="inputLineId">所属变电站</label>
+						<div class="controls">
+							<!--  <input type="text" id="inputLineId" name="substationId" />-->
+							<select id='inputLineId' class='span2' name="substationId"></select>
+						</div>
+					</div>
+					
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="add_switch_confirm_btn" class="btn btn-primary"
@@ -208,11 +226,11 @@ th, td {
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"
 					aria-hidden="true">×</button>
-				<h3>编辑开关</h3>
+				<h3>编辑线路</h3>
 			</div>
 			<div class="modal-body">
 				<form id="edit_switch_form" class="form-horizontal"
-					action="edit_switch">
+					action="edit_line">
 					<!-- action="edit_switch" -->
 					<div class="control-group">
 						<label class="control-label" for="editName">名称</label>
@@ -224,6 +242,12 @@ th, td {
 						<label class="control-label" for="editId">Id</label>
 						<div class="controls">
 							<input type="text" id="editId" name="id" />
+						</div>
+					</div>
+					<div class="hide control-group">
+						<label class="control-label" for="editLineId">所属变电站</label>
+						<div class="controls">
+							<input type="text" id="editLineId" name="substationId" />
 						</div>
 					</div>
 					<div class="modal-footer">
@@ -287,6 +311,6 @@ th, td {
 	<script src="../../js/dataTables/dataTables_initial.js"></script>
 
 	<!-- custom -->
-	<script src="../../js/custom/switch_manager.js"></script>
+	<script src="../../js/custom/line_manager.js"></script>
 </body>
 </html>
