--- a/src/main/resources/templates/low_voltage_switch_manager.html
+++ b/src/main/resources/templates/low_voltage_switch_manager.html
@@ -136,6 +136,17 @@ th, td {
 				</div>
 				<!--/span-->
 				<div class="span10 container">
+
+					<div class="control-group form-horizontal">
+						<div class="controls span4">
+							<label class="control-label">请选择变电站：</label> <select
+								id='substations' class='span6'></select>
+						</div>
+						<div class="controls span4">
+							<label class="control-label">请选择线路：</label> <select id='lines'
+								class='span6'></select>
+						</div>
+					</div>
 					<table id="switch_list"
 						class="table table-bordered table-striped table-hover table-condensed success">
 						<thead>
@@ -147,8 +158,6 @@ th, td {
 							<td>经度</td>
 							<td>纬度</td>
 							<td>SIM</td>
-							<td>公约</td>
-							<td>是否在线</td>
 							<td>进入地图</td>
 							<td>修改</td>
 							<td>删除</td>
@@ -163,8 +172,6 @@ th, td {
 							<td th:text="${switch.latitude}"></td>
 
 							<td th:text="${switch.simNumber}"></td>
-							<td th:text="${switch.protocal}!=0?'07':'101'"></td>
-							<td></td>
 							<td><button class="btn btn enter_map">进入地图 &raquo;</button></td>
 							<td><a href="#edit_switch_modal" role="button"
 								class="edit_switch_btn btn" data-toggle="modal">修改 &raquo;</a></td>
@@ -183,8 +190,6 @@ th, td {
 							<td>经度</td>
 							<td>纬度</td>
 							<td>SIM</td>
-							<td>公约</td>
-							<td>是否在线</td>
 							<td>进入地图</td>
 							<td>修改</td>
 							<td>删除</td>
@@ -253,15 +258,6 @@ th, td {
 						<label class="control-label" for="inputSim">SIM</label>
 						<div class="controls">
 							<input type="text" id="inputSim" name="simNumber" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputProtocal">公约</label>
-						<div class="controls">
-							<select name="protocal">
-								<option value="1">07公约</option>
-								<option value="0">101公约</option>
-							</select>
 						</div>
 					</div>
 					<div class="modal-footer">
@@ -336,13 +332,6 @@ th, td {
 							<input type="text" id="editSim" name="simNumber" readOnly="true" />
 						</div>
 					</div>
-					<div class="control-group">
-						<label class="control-label" for="editProtocal">公约</label>
-						<div class="controls">
-							<input type="text" id="editProtocal" name="protocal"
-								readOnly="true" />
-						</div>
-					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="edit_switch_confirm_btn" class="btn btn-primary"
@@ -404,6 +393,7 @@ th, td {
 	<script src="../../js/dataTables/dataTables_initial.js"></script>
 
 	<!-- custom -->
-	<script src="../../js/custom/switch_manager.js"></script>
+	<script src="../../js/custom/low_voltage_switch_manager.js"></script>
+	<script src="../../js/custom/substation_line_set.js"></script>
 </body>
 </html>
