--- a/src/main/resources/templates/substation_manager.html
+++ b/src/main/resources/templates/substation_manager.html
@@ -104,7 +104,7 @@ th, td {
 					<div class="btn-group offset6">
 						<a href="#add_switch_modal" id="add_switch_btn"
 							class="btn btn-primary btn-large" data-toggle="modal"
-							data-backdrop="static">添加开关 </a><a id="return_line_list_btn"
+							data-backdrop="static">添加变电站 </a><a id="return_line_list_btn"
 							href="index" class="btn btn-large">返回首页 &raquo;</a>
 					</div>
 				</div>
@@ -141,12 +141,14 @@ th, td {
 						<thead>
 							<td>名称</td>
 							<td class="hidden">Id</td>
+							<td class="hidden">线路ID</td>
 							<td>修改</td>
 							<td>删除</td>
 						</thead>
 						<tr th:each="switch:${switches}" th:if="*{switch!=null}">
 							<td th:text="${switch.name}"></td>
 							<td class="hide" th:text="${switch.id}"></td>
+							<td class="hide" th:text="${switch.companyId}"></td>
 							<td><a href="#edit_switch_modal" role="button"
 								class="edit_switch_btn btn" data-toggle="modal">修改 &raquo;</a></td>
 							<td><a href="#del_switch_modal"
@@ -158,6 +160,7 @@ th, td {
 						<tfoot>
 							<td>名称</td>
 							<td class="hidden">Id</td>
+							<td class="hidden">线路ID</td>
 							<td>修改</td>
 							<td>删除</td>
 						</tfoot>
@@ -172,18 +175,12 @@ th, td {
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"
 					aria-hidden="true">×</button>
-				<h3>添加开关</h3>
+				<h3>添加变电站</h3>
 			</div>
 			<div class="modal-body">
 				<form id="add_switch_form" class="form-horizontal"
-					action="edit_switch">
+					action="edit_substation">
 					<!-- action="edit_switch" -->
-					<div class="control-group">
-						<label class="control-label" for="inputDeviceNumber">设备号码</label>
-						<div class="controls">
-							<input type="text" id="inputDeviceNumber" name="deviceNumber" />
-						</div>
-					</div>
 					<div class="control-group">
 						<label class="control-label" for="inputName">名称</label>
 						<div class="controls">
@@ -199,43 +196,10 @@ th, td {
 					<div class="hide control-group">
 						<label class="control-label" for="inputLineId">线路Id</label>
 						<div class="controls">
-							<input type="text" id="inputLineId" name="lineId" />
+							<input type="text" id="inputLineId" name="companyId" />
 						</div>
 					</div>
 
-					<div class="control-group">
-						<label class="control-label" for="inputAddress">地址</label>
-						<div class="controls">
-							<input type="text" id="inputAddress" name="address" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputLongitude">经度</label>
-						<div class="controls">
-							<input type="text" id="inputLongitude" name="longitude" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputLatitude">纬度</label>
-						<div class="controls">
-							<input type="text" id="inputLatitude" name="latitude" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputSim">SIM</label>
-						<div class="controls">
-							<input type="text" id="inputSim" name="simNumber" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="inputProtocal">公约</label>
-						<div class="controls">
-							<select name="protocal">
-								<option value="1">07公约</option>
-								<option value="0">101公约</option>
-							</select>
-						</div>
-					</div>
 					<div class="modal-footer">
 						<button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
 						<button id="add_switch_confirm_btn" class="btn btn-primary"
@@ -253,18 +217,12 @@ th, td {
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"
 					aria-hidden="true">×</button>
-				<h3>编辑开关</h3>
+				<h3>编辑变电站</h3>
 			</div>
 			<div class="modal-body">
 				<form id="edit_switch_form" class="form-horizontal"
-					action="edit_switch">
+					action="edit_substation">
 					<!-- action="edit_switch" -->
-					<div class="control-group">
-						<label class="control-label" for="editDeviceNumber">设备号码</label>
-						<div class="controls">
-							<input type="text" id="editDeviceNumber" name="deviceNumber" />
-						</div>
-					</div>
 					<div class="control-group">
 						<label class="control-label" for="editName">名称</label>
 						<div class="controls">
@@ -280,39 +238,7 @@ th, td {
 					<div class="hide control-group">
 						<label class="control-label" for="editLineId">线路Id</label>
 						<div class="controls">
-							<input type="text" id="editLineId" name="lineId" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="editAddress">地址</label>
-						<div class="controls">
-							<input type="text" id="editAddress" name="address" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="editLongitude">经度</label>
-						<div class="controls">
-							<input type="text" id="editLongitude" name="longitude" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="editLatitude">纬度</label>
-						<div class="controls">
-							<input type="text" id="editLatitude" name="latitude" />
-						</div>
-					</div>
-
-					<div class="control-group">
-						<label class="control-label" for="editSim">SIM</label>
-						<div class="controls">
-							<input type="text" id="editSim" name="simNumber" readOnly="true" />
-						</div>
-					</div>
-					<div class="control-group">
-						<label class="control-label" for="editProtocal">公约</label>
-						<div class="controls">
-							<input type="text" id="editProtocal" name="protocal"
-								readOnly="true" />
+							<input type="text" id="editLineId" name="companyId" />
 						</div>
 					</div>
 					<div class="modal-footer">
@@ -334,7 +260,7 @@ th, td {
 				<h3 id="myModalLabel">警告</h3>
 			</div>
 			<div class="modal-body">
-				<p>您确定要删除这个开关吗？请慎重考虑</p>
+				<p>您确定要删除这个变电站吗？请慎重考虑</p>
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
@@ -376,6 +302,6 @@ th, td {
 	<script src="../../js/dataTables/dataTables_initial.js"></script>
 
 	<!-- custom -->
-	<script src="../../js/custom/switch_manager.js"></script>
+	<script src="../../js/custom/substation_manager.js"></script>
 </body>
 </html>
