--- a/src/main/resources/templates/fluid.html
+++ b/src/main/resources/templates/fluid.html
@@ -136,12 +136,11 @@ body {
 							</ul>
 						</div>
 					</div>
-					<div class='row'>
-						<div class='span4 text-center'>
-							<a id='close_switch_btn' class='btn btn-primary'
-								onclick='closeSwitch()'>合闸</a> <a id='open_switch_btn'
-								class='btn btn-primary' onclick='openSwitch()'>分闸</a>
-						</div>
+					<div class='span4'>
+						<a id='close_switch_btn'
+							class='btn btn-primary' onclick='closeSwitch()'>合闸</a> <a
+							id='open_switch_btn' class='btn btn-primary'
+							onclick='openSwitch()'>分闸</a>
 					</div>
 				</div>
 
