--- a/src/main/resources/templates/line_manager.html
+++ b/src/main/resources/templates/line_manager.html
@@ -84,7 +84,7 @@ th, td {
 					</p>
 					<ul class="nav">
 						<li><a href="index">首页</a></li>
-						<li class="active"><a href="manager">管理</a></li>
+						<li class="active"><a href="low_voltage_switch_manager">管理</a></li>
 						<li><a href="current_voltage_chart">报表</a></li>
 						<li><a href="#about">关于</a></li>
 						<li><a href="#contact">联系我们</a></li>
@@ -125,12 +125,6 @@ th, td {
 						<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
 						<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
 						<li><a href="control_measure_hitch_event_manager">无功无场故障事件</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-						<li class="nav-header">Sidebar</li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
 					</ul>
 					<!--/.well -->
 				</div>
