--- a/src/main/resources/templates/high_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/high_voltage_hitch_event_manager.html
@@ -84,7 +84,7 @@ th, td {
 					</p>
 					<ul class="nav">
 						<li><a href="index">首页</a></li>
-						<li class="active"><a href="manager">管理</a></li>
+						<li class="active"><a href="low_voltage_switch_manager">管理</a></li>
 						<li><a href="current_voltage_chart">报表</a></li>
 						<li><a href="#about">关于</a></li>
 						<li><a href="#contact">联系我们</a></li>
@@ -120,24 +120,29 @@ th, td {
 						<li><a href="low_voltage_hitch_event_manager">低压开关故障事件</a></li>
 						<li><a href="high_voltage_hitch_event_manager">高压开关故障事件</a></li>
 						<li><a href="control_measure_hitch_event_manager">无功无场故障事件</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-						<li class="nav-header">Sidebar</li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
 					</ul>
 				</div>
 				<!--/span-->
 				<div class="span10 container">
+					<div class="control-group form-horizontal">
+						<div class="controls span4">
+							<label class="control-label">请选择变电站：</label> <select
+								id='substations' class='span6'></select>
+						</div>
+						<div class="controls span4">
+							<label class="control-label">请选择线路：</label> <select id='lines'
+								class='span6'></select>
+						</div>
+						<div class="controls span4">
+							<label class="control-label">请选择设备：</label> <select id='switchs'
+								class='span6'></select>
+						</div>
+					</div>
+					<br/>
 					<table id="hitch_event_list"
 						class="table table-bordered table-striped table-hover table-condensed success"
 						width="100%">
 						<thead>
-							<td>设备号码</td>
-							<td>名称</td>
-							<td class="hidden">Id</td>
-							<td class="hidden">开关ID</td>
 							<td>故障时间</td>
 							<td>故障相位</td>
 							<td>故障原因</td>
@@ -147,14 +152,9 @@ th, td {
 							<td>A相电流</td>
 							<td>B相电流</td>
 							<td>C相电流</td>
-							<td>删除</td>
 						</thead>
 						<tr th:each="event:${hitch_events}" th:if="*{event!=null}">
-							<td th:text="${event.deviceNumber}"></td>
-							<td th:text="${event.switchName}"></td>
-							<td class="hide" th:text="${event.id}"></td>
-							<td class="hide" th:text="${event.switchId}"></td>
-							<td th:text="${event.hitchTime}"></td>
+							<td th:text="${#dates.format(event.hitchTime,'yyyy-MM-dd HH:mm:ss')}"></td>
 							<td th:text="${event.hitchPhase}"></td>
 							<!-- 故障原因 -->
 							<td th:if="*{event.hitchReason==1}">剩余电流</td>
@@ -181,18 +181,9 @@ th, td {
 							<td th:text="${event.behitchBPhaseCurrent}"></td>
 							<td th:text="${event.behitchCPhaseCurrent}"></td>
 							<!--  <td th:text="${event.protocal}!=0?'07':'101'"></td>-->
-
-							<td><a href="#del_event_modal"
-								class="del_event_btn btn btn-danger" data-toggle="modal"
-								data-backdrop="static">删除&raquo; </a></td>
-
 							<!-- th:attr="href=@{del_switch?switchId=} + ${switch.id}" -->
 						</tr>
 						<tfoot>
-							<td>设备号码</td>
-							<td>名称</td>
-							<td class="hidden">Id</td>
-							<td class="hidden">开关ID</td>
 							<td>故障时间</td>
 							<td>故障相位</td>
 							<td>故障原因</td>
@@ -202,7 +193,6 @@ th, td {
 							<td>A相电流</td>
 							<td>B相电流</td>
 							<td>C相电流</td>
-							<td>删除</td>
 						</tfoot>
 					</table>
 				</div>
@@ -261,6 +251,12 @@ th, td {
 	<script src="../../js/dataTables/dataTables_initial.js"></script>
 
 	<!-- custom -->
-	<script src="../../js/custom/hitch_event_manager.js"></script>
+	<script src="../../js/custom/Date.js"></script>
+	<script src="../../js/custom/substation_line_set.js"></script>
+	<script src="../../js/custom/line_switch_set.js"></script>
+	<script src="../../js/custom/high_voltage_switch_hitch_event_manager.js"></script>
+	
+	
+	
 </body>
 </html>
