--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,7 @@ body {
 					</p>
 					<ul class="nav">
 						<li class="active"><a href="index">首页</a></li>
-						<li><a href="manager">管理</a></li>
+						<li><a href="low_voltage_switch_manager">管理</a></li>
 						<li><a href="current_voltage_chart">报表</a></li>
 						<li><a href="#about">关于</a></li>
 						<li><a href="#contact">联系我们</a></li>
