--- a/src/main/resources/templates/low_voltage_switch_manager.html
+++ b/src/main/resources/templates/low_voltage_switch_manager.html
@@ -36,7 +36,7 @@
 					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
 					<a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
 					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
-					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
+					<a href="#system" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
 					<a href="#about" class="btn banner-btn btn-primary"><i class="fa fa-info-circle"></i>关于</a>
 					<a href="#contact" class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
 				</div>
