--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>中压配网智能监控系统 - 上海东君电气有限公司</title>
+	<title>电网智能监控系统 - 上海东君电气有限公司</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<link href="../../css/bootstrap.css" rel="stylesheet" />
+	<link href="../../css/ZTree/zTreeStyle.css" rel="stylesheet" />
 	<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
 	<link href="../../css/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen" />
 	<link href="../../css/chart.css" rel="stylesheet" />
@@ -34,127 +35,147 @@
 					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
 					<a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
 					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
-					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
+					<a href="#system" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
 					<a href="#about" class="btn banner-btn btn-primary"><i class="fa fa-info-circle"></i>关于</a>
 					<a href="#contact" class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
 				</div>
 			</div>
 		</div>
 
-		<div class="control-group form-horizontal row-fluid">
-			<div class="controls span4">
-				<label class="control-label">请选择变电站：</label> <select
-					id='substations' class='span6'></select>
-			</div>
-			<div class="controls span4">
-				<label class="control-label">请选择线路：</label> <select id='lines'
-					class='span6'></select>
-			</div>
-		</div>
-
-		<div class="control-group form-horizontal row-fluid">
-			<div class="controls span4">
-				<label class="control-label">请选择设备类型:</label> <select
-					id='zTree_node_type' class='span6'>
-					<option value='0'>低压设备</option>
-					<option value='1'>高压设备</option>
-					<option value='2'>无功无场设备</option>
-				</select>
-			</div>
-			<div class="controls span4">
-				<label class="control-label">请选择设备：</label> <select id='switchs'
-					class='span6'></select>
-			</div>
-		</div>
-
-		<div class="control-group offset9">
-			<div class="controls input-append date form_date" data-date=""
-				data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
-				data-link-format="yyyy-mm-dd">
-				<input id="search_date" type="text" /> <span class="add-on"><i
-					class="icon-remove"></i></span> <span class="add-on"><i
-					class="icon-th"></i></span>
-				<button id="search_btn" class="btn">搜索</button>
-			</div>
-		</div>
-
-
-		<div class="span11 row-fluid">
-			<span class="span2 offset5"><h3>电压曲线图</h3> </span>
-			<div class="thumbnail span10">
-				<div id="parent_voltage_chart" style="height: 100%">
-					<canvas id="voltage_chart" height="400"></canvas>
+		<div class="row-fluid">
+			<div class="span2">
+				<div class="input-append">
+					<select id='zTree_node_type_side' class='span4'>
+						<option value='0'>低压设备</option>
+						<option value='1'>高压设备</option>
+						<option value='2'>无功无场设备</option>
+					</select>
+					<input id="search_node_key" class="span5" type="text" placeholder="请输入..." />
+					<button id="searchNode" class="btn" type="button">搜索</button>
+				</div>
+				<div class="well sidebar-nav ">
+					<ul id="treeDemo" class="ztree"></ul>
 				</div>
 			</div>
-			<div class="span1" th:fragment="tooltip">
-				<ul class="inline">
-					<li class="a_phase"></li>
-					<li>A相</li>
-				</ul>
-				<ul class="inline">
-					<li class="b_phase"></li>
-					<li>B相</li>
-				</ul>
-				<ul class="inline">
-					<li class="c_phase"></li>
-					<li>C相</li>
-				</ul>
-			</div>
-		</div>
 
-		<div class="span11 row-fluid">
-			<span class="span2 offset5"><h3>电流曲线图</h3> </span>
-			<div class="thumbnail span10">
-				<div id="parent_current_chart" style=" height: 100%">
-					<canvas id="current_chart" height="400"></canvas>
+			<div class="span10 container">
+				<div class="control-group form-horizontal row-fluid">
+					<div class="controls span3">
+						<label class="span4">变电站：</label>
+						<select id='substations' class='span8'></select>
+					</div>
+					<div class="controls span3">
+						<label class="span4">线路：</label>
+						<select id='lines' class='span8'></select>
+					</div>
+					<div class="controls span3">
+						<label class="span4">设备类型:</label>
+						<select id='zTree_node_type' class='span8'>
+							<option value='0'>低压设备</option>
+							<option value='1'>高压设备</option>
+							<option value='2'>无功无场设备</option>
+						</select>
+					</div>
+					<div class="controls span3">
+						<label class="span4">设备：</label>
+						<select id='switchs' class='span8'></select>
+					</div>
 				</div>
-			</div>
-			<div class="span1" th:fragment="tooltip">
-				<ul class="inline">
-					<li class="a_phase"></li>
-					<li>A相</li>
-				</ul>
-				<ul class="inline">
-					<li class="b_phase"></li>
-					<li>B相</li>
-				</ul>
-				<ul class="inline">
-					<li class="c_phase"></li>
-					<li>C相</li>
-				</ul>
-			</div>
-		</div>
 
-		<div class="span11 row-fluid">
-			<span class="span2 offset5"><h3>功率曲线图</h3> </span>
-			<div class="thumbnail span10">
-				<div id="parent_power_chart" style=" height: 100%">
-					<canvas id="power_chart" height="400"></canvas>
+				<div class="control-group">
+					<div class="controls input-append date form_date" data-date=""
+						data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
+						data-link-format="yyyy-mm-dd">
+						<input id="search_date" type="text" />
+						<span class="add-on"><i class="icon-remove"></i></span>
+						<span class="add-on"><i class="icon-th"></i></span>
+						<button id="search_btn" class="btn">搜索</button>
+					</div>
 				</div>
-			</div>
-			<div class="span1" th:fragment="tooltip">
-				<ul class="inline">
-					<li class="a_phase"></li>
-					<li>A相</li>
-				</ul>
-				<ul class="inline">
-					<li class="b_phase"></li>
-					<li>B相</li>
-				</ul>
-				<ul class="inline">
-					<li class="c_phase"></li>
-					<li>C相</li>
-				</ul>
-			</div>
-		</div>
+
+				<ul class="nav nav-pills">
+			    <li class="active"><a data-toggle="pill" href="#tab1">电压曲线图</a></li>
+			    <li><a data-toggle="pill" href="#tab2">电流曲线图</a></li>
+			    <li><a data-toggle="pill" href="#tab3">功率曲线图</a></li>
+			  </ul>
+			  
+			  <div class="tab-content">
+			    <div id="tab1" class="tab-pane fade in active">
+						<div class="thumbnail span11">
+							<div id="parent_voltage_chart" style="height: 100%">
+								<canvas id="voltage_chart" height="400" width="300" ></canvas>
+							</div>
+						</div>
+						<div class="span1" th:fragment="tooltip">
+							<ul class="inline">
+								<li class="a_phase"></li>
+								<li>A相</li>
+							</ul>
+							<ul class="inline">
+								<li class="b_phase"></li>
+								<li>B相</li>
+							</ul>
+							<ul class="inline">
+								<li class="c_phase"></li>
+								<li>C相</li>
+							</ul>
+						</div>
+			    </div>
+			    <div id="tab2" class="tab-pane fade">
+			      <div class="thumbnail span11">
+							<div id="parent_current_chart" style="height: 100%">
+								<canvas id="current_chart"  height="400" width="300" ></canvas>
+							</div>
+						</div>
+						<div class="span1" th:fragment="tooltip">
+							<ul class="inline">
+								<li class="a_phase"></li>
+								<li>A相</li>
+							</ul>
+							<ul class="inline">
+								<li class="b_phase"></li>
+								<li>B相</li>
+							</ul>
+							<ul class="inline">
+								<li class="c_phase"></li>
+								<li>C相</li>
+							</ul>
+						</div>
+			    </div>
+			    <div id="tab3" class="tab-pane fade">
+			      <div class="thumbnail span11">
+							<div id="parent_power_chart" style=" height: 100%">
+								<canvas id="power_chart"  height="400" width="300" ></canvas>
+							</div>
+						</div>
+						<div class="span1" th:fragment="tooltip">
+							<ul class="inline">
+								<li class="a_phase"></li>
+								<li>A相</li>
+							</ul>
+							<ul class="inline">
+								<li class="b_phase"></li>
+								<li>B相</li>
+							</ul>
+							<ul class="inline">
+								<li class="c_phase"></li>
+								<li>C相</li>
+							</ul>
+						</div>
+			    </div>
+
+			  </div>
+
+			</div> 
+		</div> 
+
+		
 
 		<footer>
 			<p>&copy; Company 2013</p>
 		</footer>
 
 	</div>
-
-	<!--/.fluid-container-->
 
 	<!-- Le javascript ================================================== -->
 	<script src="../../js/jquery.js"></script>
@@ -183,6 +204,7 @@
 	<script src="../../js/custom/substation_line_set.js"></script>
 	<script src="../../js/custom/line_switch_set.js"></script>
 	<script src="../../js/custom/current_voltage_chart.js"></script>
+	<script src="../../js/ZTree/jquery.ztree.core-3.5.js"></script>
 
 </body>
 </html>
