front-end-fixed

--- a/src/main/resources/templates/substation_manager.html
+++ b/src/main/resources/templates/substation_manager.html
@@ -74,6 +74,13 @@
 			</div>
 
 			<div class="span10 container">
+
+				<div class="form-inline">
+					<div class="form-group span3">
+						<a href="#add_switch_modal" class="btn btn-primary" id="add_switch_btn" data-toggle="modal" data-backdrop="static">添加变电站</a>
+					</div>
+				</div>
+
 				<table id="switch_list" class="table table-bordered table-striped table-hover table-condensed success">
 					<thead>
 						<td>名称</td>
