--- a/src/main/resources/static/css/chart.css
+++ b/src/main/resources/static/css/chart.css
@@ -10,7 +10,8 @@
 }
 
 .row-fluid > .span10 > .tab-content {
-	height: calc(100% - 55px);
+	margin-top: 10px;
+	height: calc(100% - 84px);
 	position: relative;
 }
 
@@ -24,9 +25,13 @@
 	margin-right: 5px;
 }
 
-.control-group + .nav {
+.container > .nav {
 	margin-bottom: 10px;
 	height: 35px;
+}
+
+.clean {
+	clear: both;
 }
 
 .thumbnail {
