--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -68,9 +68,9 @@
 			</div>
 
 			<div class="span10 container">
-				<div class="span12">
+				<div class="form-inline span12">
 					<div class="form-group span4">
-						<label class="span1">从:</label>
+						<label class="span1">从：</label>
 						<div class="input-append date form_date" data-date=""
 							data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
 							data-link-format="yyyy-mm-dd">
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="form-group span4">
-						<label class="span1">到:</label>
+						<label class="span1">到：</label>
 						<div class="input-append date form_date" data-date=""
 							data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
 							data-link-format="yyyy-mm-dd">
@@ -96,7 +96,11 @@
 					<li><a data-toggle="pill" href="#tab2">电流曲线图</a></li>
 					<li><a data-toggle="pill" href="#tab3">功率曲线图</a></li>
 				</ul>
-				<div class="clean"></div>
+
+				<div class="control-group"></div>
+
+
+
 				<div class="tab-content">
 					<div id="tab1" class="tab-pane fade in active">
 						<div class="thumbnail span11">
