完成报警，高压开关弹窗的显示

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -23,3 +23,17 @@
 .BDM_custom_popup .red {
   color: red;
 }
+
+.green_point {
+	width: 10px;
+	height: 10px;
+	background-color: #4CB549;
+	display: block;
+}
+
+.red_point {
+	width: 10px;
+	height: 10px;
+	background-color: #F03726;
+	display: block;
+}
