完成了excel上传下载 批量导入导

--- a/src/main/resources/templates/control_measure_switch_manager.html
+++ b/src/main/resources/templates/control_measure_switch_manager.html
@@ -75,11 +75,11 @@
 				<div class="form-inline">
 					<div class="form-group span3">
 						<label class="span3">变电站:</label>
-						<select id='substations' class="span9"></select>
+						<select class="substations span9"></select>
 					</div>
 					<div class="form-group span3">
 						<label class="span3">线路:</label>
-						<select id='lines' class='span9'></select>
+						<select class='lines span9'></select>
 					</div>
 					<div class="form-group span3">
 						<a href="#add_switch_modal" class="btn btn-primary" id="add_switch_btn" data-toggle="modal" data-backdrop="static">添加开关</a>
