--- a/src/main/resources/templates/high_voltage_hitch_event_manager.html
+++ b/src/main/resources/templates/high_voltage_hitch_event_manager.html
@@ -75,11 +75,11 @@
 				<div class="form-inline">
 					<div class="form-group span3">
 						<label class="span3">变电站:</label>
-						<select id='substations' class="span9"></select>
+						<select class="substations span9"></select>
 					</div>
 					<div class="form-group span3">
 						<label class="span3">线路:</label>
-						<select id='lines' class='span9'></select>
+						<select class='lines span9'></select>
 					</div>
 					<div class="form-group span3">
 						<label class="span3">设备:</label>
