--- a/src/main/resources/templates/line_manager.html
+++ b/src/main/resources/templates/line_manager.html
@@ -80,7 +80,7 @@
 				<div class="form-inline">
 					<div class="form-group span3">
 						<label class="span3">变电站:</label>
-						<select id='substations' class="span9"></select>
+						<select class="substations span9"></select>
 					</div>
 					<div class="form-group span3">
 						<a href="#add_switch_modal" class="btn btn-primary" id="add_switch_btn" data-toggle="modal" data-backdrop="static">添加线路</a>
